@@ -54,6 +54,14 @@
 
 2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>
 
+	* hildon-widgets/hildon-color-selector.c (key_pressed): use
+	g_assert instead of g_return_val_if_fail
+
+	+ indent changes
+
+
+2006-03-03  Luc Pionchon  <luc.pionchon@nokia.com>
+
 	* hildon-widgets/hildon-get-password-dialog.[ch]: 
 	(hildon_get_password_dialog_set_title) marked deprecated.
 
